# anasklad-erp

./: .env.example  .gitignore  .importlinter  ARCHITECTURE.md  Caddyfile  DEPLOY.md  DESIGN.md  PLAN.md  README.md  docker-compose.prod.yml  docker-compose.yml
backend/: Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260420_0001_initial_auth.py  20260420_0002_initial_integrations.py  20260420_0003_initial_catalog.py  20260420_0004_initial_orders.py  20260420_0005_initial_finance.py  20260420_0006_fix_multitenant_constraints.py
backend/src/anasklad/: __init__.py  config.py  granian_entry.py  main.py
backend/src/anasklad/core/db/: base.py  session.py  uow.py
backend/src/anasklad/core/http/: deps.py  errors.py  middleware.py
backend/src/anasklad/core/observability/: logging.py
backend/src/anasklad/core/security/: crypto.py  hashing.py  jwt.py
backend/src/anasklad/di/: container.py  core_providers.py
backend/src/anasklad/modules/auth/: facade.py  provider.py
backend/src/anasklad/modules/auth/api/: router.py  schemas.py
backend/src/anasklad/modules/auth/application/: service.py
backend/src/anasklad/modules/catalog/: facade.py  provider.py
backend/src/anasklad/modules/finance/: provider.py
backend/src/anasklad/modules/integrations/: facade.py  provider.py
backend/src/anasklad/modules/orders/: provider.py
backend/src/anasklad/modules/reporting/: provider.py
backend/src/anasklad/modules/sync/: worker.py
backend/tests/: test_crypto.py  test_hashing.py  test_jwt.py
frontend/: .gitignore  (+8 more)
(+63 files in other folders)
