[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "anasklad"
version = "0.1.0"
description = "Anasklad-ERP backend — modular monolith for Uzum Market sellers"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "granian[rloop]>=1.6",
    "pydantic>=2.9",
    "pydantic-settings>=2.5",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "alembic>=1.13",
    "redis[hiredis]>=5.1",
    "dishka>=1.4",
    "arq>=0.26",
    "pyjwt[crypto]>=2.9",
    "argon2-cffi>=23.1",
    "cryptography>=43",
    "structlog>=24.4",
    "orjson>=3.10",
    "httpx[http2]>=0.27",
    "tenacity>=9.0",
    "uzum-connector",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "respx>=0.21",
    "testcontainers[postgres,redis]>=4.8",
    "ruff>=0.7",
    "mypy>=1.13",
    "import-linter>=2.1",
]

[tool.uv.sources]
uzum-connector = { path = "../packages/uzum-connector", editable = true }

[tool.hatch.build.targets.wheel]
packages = ["src/anasklad"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM", "RET", "PTH", "PL", "ASYNC"]
ignore = ["PLR0913", "PLR2004"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
